# stem-agent-platform

./: .gitignore  README.md  pyproject.toml
examples/: simple_assistant.py
src/stem_agent/: __init__.py  config.py  stem_agent.py
src/stem_agent/agent_core/: adapt.py  execute.py  format.py  learn.py  match_skills.py  perceive.py  pipeline.py  plan.py  reason.py
src/stem_agent/caller/: store.py
src/stem_agent/gateway/: a2a.py  rest.py
src/stem_agent/memory/: episodic.py  manager.py  procedural.py  semantic.py
src/stem_agent/prompts/: percieve.py
src/stem_agent/shared/: errors.py  logger.py  schemas.py
src/stem_agent/tools/: decorators.py  executor.py  registry.py
tests/: test_adapt.py  test_caller_store.py  test_config.py  test_gateway_a2a.py  test_gateway_rest.py  test_match_skills.py  test_memory.py  test_perceive.py  test_pipeline.py  test_schemas.py
