[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stem-agent-platform"
version = "0.0.1"
description = "An adaptive multi-protocol agent core inspired by the Shen STEM agent architecture."
requires-python = ">=3.12"
authors = [
    {name = "Stefan"}
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.30",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",   # FastAPI TestClient async support
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]